--- a/style.css
+++ b/style.css
@@ -2,26 +2,43 @@ html {
     box-sizing: border-box;
 }
 
-/* Masthead  */
-/* nav {
-    width: 100%;
-    background-color: white;
-    border-top: 1px solid rgba(184, 189, 185, 0.5);
-    border-bottom: 1px solid rgba(184, 189, 185, 0.5);
-    padding: 20px;
-} */
+/* ================================= 
+  Base Element Styles
+==================================== */
 
-.sticky {
-    position: fixed;
-    top: 0;
-    width: 100%;
-  }
+* {
+	box-sizing: border-box;
+}
 
-  .sticky + .content {
-    padding-top: 60px;
-  }
-  
-  
+h2 {
+    font-weight: 700;
+    font-size: 2em;
+}
+
+a {
+    font-weight: 700;
+    text-decoration: none;
+    color: black;
+}
+
+a:hover{
+    color: rgb(116, 192, 191);
+}
+body {
+    font-family: 'Source Sans Pro', sans-serif;
+    margin: 0 10% 0 10%;
+    background-color: rgb(249, 249, 249);
+}
+
+footer {
+    margin-top: 50px;
+}
+
+/* ================================= 
+  Base Layout Styles
+==================================== */
+/* ---- Navigation ---- */
+
 #navbar {
     overflow: hidden;
     background-color: #333;
@@ -41,53 +58,38 @@ html {
     float: left;
   }
   
-  #navbar a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px;
-    text-decoration: none;
-  }
-  
+#navbar a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+}
+
   /* Change the link color to #111 (black) on hover */
   #navbar li a:hover {
     background-color: #111;
   }
 
-#logo {
-    width: 350px;
-    height: 63.58px;
-    float: top;
-    margin: 30px 0px 30px 0px;
-    padding: 10px;
-}   
+/* ---- Layout Containers ---- */
 
-a {
-    font-weight: 700;
-    text-decoration: none;
-    color: black;
+.col {
+    padding-right: 1em;
+    padding-left: 1em;
+
 }
 
-a:hover{
-    color: rgb(116, 192, 191);
-}
 
-/* content */
+/* ---- Page Elements ---- */
 
-body {
-    font-family: 'Source Sans Pro', sans-serif;
-    margin: 0 10% 0 10%;
-    background-color: rgb(249, 249, 249);
+.banner {
+  
+
 }
 
 .bio {
     margin-top: 40px;
-}
-
-h2 {
-    font-weight: 700;
-    font-size: 2em;
 }
 
 .date {
@@ -99,13 +101,50 @@ h2 {
     margin-top: 50px;
 }
 
-footer {
-    margin-top: 50px;
+#logo {
+    width: 350px;
+    height: 63.58px;
+    float: top;
+}   
+
+/* ================================= 
+  Media Queries
+==================================== */
+
+@media (min-width: 1025px){
+
+  body {
+    padding-top: 121px;
+  }
+
+  header {
+    position: fixed;
+    background: #fff;
+    width: 100%;
+    top: 0;
+    display: inline-block;
+  }
+
+  #logo {
+    margin: 10px 0px 10px 0px;
+  }
+
+
 }
 
-@media screen and (max-width: 460px) {
-    li {
-        width: 100% !important;
-        float:none !important;
-    }
-}
+
+
+	/* ---- Float clearfix ---- */
+
+	.clearfix::after {
+		content: " ";
+		display: table;
+		clear: both;
+	}
+
+  
+  
+/* content */
+
+
+
