--- a/style.css
+++ b/style.css
@@ -7,15 +7,18 @@ html {
     }
 
 body {
-/*    background-color: rgb(249, 249, 249);
-*/}
+    background-color: rgb(249, 249, 249);
+}
+
+
 
 /* Custom styles */
 
 .card-image {
-width: 60%;
-height: 20%;
+width: 208px;
+height: 150px;
 }
+
 
 .buttonspacing {
     margin-bottom: 20px;
@@ -48,6 +51,7 @@ a:hover{
     overflow: hidden;
     background-color: #333;
     margin-bottom: 20px;
+    z-index: 1;
 }
 
 #navbar ul {
@@ -126,12 +130,19 @@ footer a:hover {
 
 /* Media queries */
 
-
-
-
 @media screen and (max-width: 460px) {
     li {
         width: 100% !important;
         float:none !important;
     }
+
+/*[hamburger menu]*/
+/*..............................*/
+
+}
+
+@media screen and (min-width: 900px) {
+
+
+
 }
