added responsive navbar, changed script links on index.html page, added section IDs for navbar

--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
-html {
-    box-sizing: border-box;
-}
+
 
 * {
     font-family: 'Source Sans Pro', sans-serif;
@@ -35,8 +33,9 @@ a:hover{
 
 /*Navbar*/
 
-.sticky {
+/*.sticky {
     position: sticky;
+    display: block;
     top: 0;
     width: 100%;
   }
@@ -45,7 +44,7 @@ a:hover{
     padding-top: 60px;
   }
   
-
+*//*
 #navbar {
     overflow: hidden;
     background-color: #333;
@@ -70,7 +69,7 @@ a:hover{
     text-align: center;
     padding: 14px;
     text-decoration: none;
-  }
+  }*/
 
 .navbar-contact {
    color: white;
@@ -146,19 +145,4 @@ footer a:hover {
 
 /* Media queries */
 
-@media screen and (max-width: 460px) {
-    li {
-        width: 100% !important;
-        float:none !important;
-    }
 
-/*[hamburger menu]*/
-/*..............................*/
-
-}
-
-@media screen and (min-width: 900px) {
-
-
-
-}
