--- a/style.css
+++ b/style.css
@@ -6,102 +6,54 @@
 
 body {
     background-color: rgb(249, 249, 249);
+    margin: 0 auto;
 }
 
 
+/*Navbar*/
+
+nav a {
+    color: #f2f2f2;
+  }
+
+/*nav li a:hover {
+    background-color: white;
+    color: black !important;
+  }*/
+
 /* Custom styles */
+
+a:hover{
+    color: rgb(116, 192, 191);
+}
 
 .card-image {
 width: 208px;
 height: 150px;
 }
 
-
 .buttonspacing {
     margin-bottom: 20px;
 }
 
-a {
+/*a {
     font-weight: 700;
     text-decoration: none;
     color: black;
-}
-
-a:hover{
-    color: rgb(116, 192, 191);
-}
-
-/*Navbar*/
-
-/*.sticky {
-    position: sticky;
-    display: block;
-    top: 0;
-    width: 100%;
-  }
-
-  .sticky + .content {
-    padding-top: 60px;
-  }
-  
-*//*
-#navbar {
-    overflow: hidden;
-    background-color: #333;
-    margin-bottom: 20px;
-    z-index: 1;
-}
-
-#navbar ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-#navbar li {
-    float: left;
-  }
-  
-#navbar a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px;
-    text-decoration: none;
-  }*/
-
-.navbar-contact {
-   color: white;
-    position: absolute;
-    left: 93%;
-    top: -15%;
-    font-size: 30px;
-
-}
-
-.navbar-call {
-  color: white;
-    position: absolute;
-    left: 86%;
-    top: -15%;
-    font-size: 30px;
-}
-
-#navbar li a:hover {
-    background-color: white;
-    color: black;
-  }
-
+}*/
 #logo {
     width: 350px;
     height: 83px;
     margin: 14px 0px 14px 0px;
     padding: 10px;
 }   
+#logo:hover {
+    opacity: 80%;
 
-/* content */
-section {
+}   
+
+
+ content section {
     margin: 0px 40px 0px 40px;
 
 }
@@ -143,6 +95,4 @@ footer a:hover {
   color: white;
 }
 
-/* Media queries */
-
-
+/* Media queries 
