--- a/style.css
+++ b/style.css
@@ -49,13 +49,6 @@ a:hover{
 }
 
 
-
-/*a {
-    font-weight: 700;
-    text-decoration: none;
-    color: black;
-}*/
-
 #logo {
     width: 350px;
     height: 83px;
@@ -83,6 +76,10 @@ h2 {
 
 #news {
     margin: 20px 0px 20px 0px;
+}
+
+#contact {
+  margin-top: 32px;
 }
 
 footer {
