index.html cards border and padding added

--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@ main {
 
 main .card {
   background-color: white !important;
+  border-top: 4px solid rgb(87, 181, 177);
+  padding: 20px;
 }
 
 a:hover{
