--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@ main {
 
 /*Navbar*/
 
-.bg-dark {
-  background-color: #58b5b1 !important;
+.navbar-dark .navbar-nav .nav-link {
+    color: rgb(179, 220, 222);
 }
 
 .green-top {
