--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ a:hover{
 }
 
 h2 {
-    font-family: 'Raleway';
+    font-family: 'Raleway', sans-serif;
     font-weight: 700;
     font-size: 2em;
 }
