--- a/style.css
+++ b/style.css
@@ -7,13 +7,13 @@ body {
 }
 
 main {
-      margin: 10px 10px 10px 10px !important;
 }
 
 /*Navbar*/
 
 .navbar-dark .navbar-nav .nav-link {
     color: rgb(179, 220, 222);
+    font-family: Raleway, sans-serif;
 }
 
 .green-top {
@@ -50,7 +50,7 @@ a:hover{
     border-color: #117a8b;
 }
 
-h2 {
+h2{
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
     font-size: 2em;
